// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`password-group-tree-render add form 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="treeLayout"
      >
        <div
          class="buttonPanel"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary ant-btn-sm ant-btn-icon-only"
            title="Добавить группу"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-plus "
                data-icon="plus"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary ant-btn-sm ant-btn-icon-only"
            disabled=""
            title="Редактировать группу"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-pen-to-square "
                data-icon="pen-to-square"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary ant-btn-sm ant-btn-icon-only"
            disabled=""
            title="Удалить группу"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-trash-can "
                data-icon="trash-can"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0H284.2c12.1 0 23.2 6.8 28.6 17.7L320 32h96c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 96 0 81.7 0 64S14.3 32 32 32h96l7.2-14.3zM32 128H416V448c0 35.3-28.7 64-64 64H96c-35.3 0-64-28.7-64-64V128zm96 64c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
          <div
            class="toggle groupToggle"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-bars "
              data-icon="bars"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <div
          class="tree"
        >
          <div
            class="ant-tree ant-tree-icon-hide css-dev-only-do-not-override-10e73cp ant-tree-show-line"
            role="tree"
          >
            <div>
              <input
                aria-label="for screen reader"
                style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                tabindex="0"
                value=""
              />
            </div>
            <div
              aria-hidden="true"
              class="ant-tree-treenode"
              style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
            >
              <div
                class="ant-tree-indent"
              >
                <div
                  class="ant-tree-indent-unit"
                />
              </div>
            </div>
            <div
              class="ant-tree-list"
              style="position: relative;"
            >
              <div
                class="ant-tree-list-holder"
              >
                <div>
                  <div
                    class="ant-tree-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      aria-grabbed="false"
                      class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-selected"
                      draggable="false"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      />
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      >
                        <span
                          class="ant-tree-switcher-leaf-line"
                        />
                      </span>
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal ant-tree-node-selected"
                        title="Мои пароли"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Мои пароли
                        </span>
                      </span>
                    </div>
                    <div
                      aria-grabbed="false"
                      class="ant-tree-treenode ant-tree-treenode-switcher-close"
                      draggable="false"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      />
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      >
                        <span
                          class="ant-tree-switcher-leaf-line"
                        />
                      </span>
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Мои пароли2"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Мои пароли2
                        </span>
                      </span>
                    </div>
                    <div
                      aria-grabbed="false"
                      class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
                      draggable="false"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      />
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      >
                        <span
                          class="ant-tree-switcher-leaf-line"
                        />
                      </span>
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Мои пароли2-1"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Мои пароли2-1
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="ant-modal-root css-dev-only-do-not-override-dkbvqv"
      >
        <div
          class="ant-modal-mask"
        />
        <div
          class="ant-modal-wrap"
          tabindex="-1"
        >
          <div
            aria-modal="true"
            class="ant-modal css-dev-only-do-not-override-dkbvqv ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
            role="dialog"
            style="width: 700px; transform-origin: NaNpx NaNpx;"
          >
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
            <div
              class="ant-modal-content"
            >
              <div
                class="ant-modal-body"
              >
                <h3>
                  Добавить группу
                </h3>
                <form
                  class="ant-form ant-form-horizontal css-dev-only-do-not-override-dkbvqv form"
                >
                  <div
                    class="ant-form-item css-dev-only-do-not-override-dkbvqv"
                  >
                    <div
                      class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
                    >
                      <div
                        class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-dkbvqv"
                      >
                        <label
                          class=""
                          for="parentId"
                          title="Родительская группа:"
                        >
                          Родительская группа
                        </label>
                      </div>
                      <div
                        class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <div
                              class="ant-select ant-tree-select ant-select-in-form-item css-dev-only-do-not-override-dkbvqv ant-select-single ant-select-show-arrow"
                            >
                              <div
                                class="ant-select-selector"
                              >
                                <span
                                  class="ant-select-selection-search"
                                >
                                  <input
                                    aria-autocomplete="list"
                                    aria-controls="parentId_list"
                                    aria-expanded="false"
                                    aria-haspopup="listbox"
                                    aria-owns="parentId_list"
                                    autocomplete="off"
                                    class="ant-select-selection-search-input"
                                    id="parentId"
                                    readonly=""
                                    role="combobox"
                                    style="opacity: 0;"
                                    type="search"
                                    unselectable="on"
                                    value=""
                                  />
                                </span>
                                <span
                                  class="ant-select-selection-item"
                                  title="Мои пароли"
                                >
                                  Мои пароли
                                </span>
                              </div>
                              <span
                                aria-hidden="true"
                                class="ant-select-arrow"
                                style="user-select: none;"
                                unselectable="on"
                              >
                                <span
                                  aria-label="down"
                                  class="anticon anticon-down ant-select-suffix"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="down"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-form-item css-dev-only-do-not-override-dkbvqv"
                  >
                    <div
                      class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
                    >
                      <div
                        class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-dkbvqv"
                      >
                        <label
                          class=""
                          for="title"
                          title="Наименование:"
                        >
                          Наименование
                        </label>
                      </div>
                      <div
                        class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <input
                              class="ant-input css-dev-only-do-not-override-dkbvqv css-dev-only-do-not-override-dkbvqv"
                              id="title"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-form-item css-dev-only-do-not-override-dkbvqv ant-form-item-hidden"
                  >
                    <div
                      class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
                    >
                      <div
                        class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <input
                              class="ant-input css-dev-only-do-not-override-dkbvqv css-dev-only-do-not-override-dkbvqv"
                              id="key"
                              type="hidden"
                              value="0"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-row ant-row-end css-dev-only-do-not-override-dkbvqv"
                  >
                    <div
                      class="ant-col css-dev-only-do-not-override-dkbvqv"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary"
                        type="submit"
                      >
                        <span>
                          Сохранить
                        </span>
                      </button>
                    </div>
                    <div
                      class="ant-col css-dev-only-do-not-override-dkbvqv"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-default actionButton"
                        type="button"
                      >
                        <span>
                          Отмена
                        </span>
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="treeLayout"
    >
      <div
        class="buttonPanel"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary ant-btn-sm ant-btn-icon-only"
          title="Добавить группу"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-plus "
              data-icon="plus"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary ant-btn-sm ant-btn-icon-only"
          disabled=""
          title="Редактировать группу"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-pen-to-square "
              data-icon="pen-to-square"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary ant-btn-sm ant-btn-icon-only"
          disabled=""
          title="Удалить группу"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-trash-can "
              data-icon="trash-can"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0H284.2c12.1 0 23.2 6.8 28.6 17.7L320 32h96c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 96 0 81.7 0 64S14.3 32 32 32h96l7.2-14.3zM32 128H416V448c0 35.3-28.7 64-64 64H96c-35.3 0-64-28.7-64-64V128zm96 64c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <div
          class="toggle groupToggle"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-bars "
            data-icon="bars"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="tree"
      >
        <div
          class="ant-tree ant-tree-icon-hide css-dev-only-do-not-override-10e73cp ant-tree-show-line"
          role="tree"
        >
          <div>
            <input
              aria-label="for screen reader"
              style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
              tabindex="0"
              value=""
            />
          </div>
          <div
            aria-hidden="true"
            class="ant-tree-treenode"
            style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
          >
            <div
              class="ant-tree-indent"
            >
              <div
                class="ant-tree-indent-unit"
              />
            </div>
          </div>
          <div
            class="ant-tree-list"
            style="position: relative;"
          >
            <div
              class="ant-tree-list-holder"
            >
              <div>
                <div
                  class="ant-tree-list-holder-inner"
                  style="display: flex; flex-direction: column;"
                >
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-selected"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    />
                    <span
                      class="ant-tree-switcher ant-tree-switcher-noop"
                    >
                      <span
                        class="ant-tree-switcher-leaf-line"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal ant-tree-node-selected"
                      title="Мои пароли"
                    >
                      <span
                        class="ant-tree-title"
                      >
                        Мои пароли
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-close"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    />
                    <span
                      class="ant-tree-switcher ant-tree-switcher-noop"
                    >
                      <span
                        class="ant-tree-switcher-leaf-line"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                      title="Мои пароли2"
                    >
                      <span
                        class="ant-tree-title"
                      >
                        Мои пароли2
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    />
                    <span
                      class="ant-tree-switcher ant-tree-switcher-noop"
                    >
                      <span
                        class="ant-tree-switcher-leaf-line"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                      title="Мои пароли2-1"
                    >
                      <span
                        class="ant-tree-title"
                      >
                        Мои пароли2-1
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": Object {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`password-group-tree-render edit form 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="treeLayout"
      >
        <div
          class="buttonPanel"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary ant-btn-sm ant-btn-icon-only"
            title="Добавить группу"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-plus "
                data-icon="plus"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary ant-btn-sm ant-btn-icon-only"
            title="Редактировать группу"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-pen-to-square "
                data-icon="pen-to-square"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary ant-btn-sm ant-btn-icon-only"
            title="Удалить группу"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-trash-can "
                data-icon="trash-can"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0H284.2c12.1 0 23.2 6.8 28.6 17.7L320 32h96c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 96 0 81.7 0 64S14.3 32 32 32h96l7.2-14.3zM32 128H416V448c0 35.3-28.7 64-64 64H96c-35.3 0-64-28.7-64-64V128zm96 64c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
          <div
            class="toggle groupToggle"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-bars "
              data-icon="bars"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <div
          class="tree"
        >
          <div
            class="ant-tree ant-tree-icon-hide css-dev-only-do-not-override-10e73cp ant-tree-show-line"
            role="tree"
          >
            <div>
              <input
                aria-label="for screen reader"
                style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                tabindex="0"
                value=""
              />
            </div>
            <div
              aria-hidden="true"
              class="ant-tree-treenode"
              style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
            >
              <div
                class="ant-tree-indent"
              >
                <div
                  class="ant-tree-indent-unit"
                />
              </div>
            </div>
            <div
              class="ant-tree-list"
              style="position: relative;"
            >
              <div
                class="ant-tree-list-holder"
              >
                <div>
                  <div
                    class="ant-tree-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      aria-grabbed="false"
                      class="ant-tree-treenode ant-tree-treenode-switcher-open"
                      draggable="false"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      />
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      >
                        <span
                          class="ant-tree-switcher-leaf-line"
                        />
                      </span>
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Мои пароли"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Мои пароли
                        </span>
                      </span>
                    </div>
                    <div
                      aria-grabbed="false"
                      class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-selected"
                      draggable="false"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      />
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      >
                        <span
                          class="ant-tree-switcher-leaf-line"
                        />
                      </span>
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal ant-tree-node-selected"
                        title="Мои пароли2"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Мои пароли2
                        </span>
                      </span>
                    </div>
                    <div
                      aria-grabbed="false"
                      class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
                      draggable="false"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      />
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      >
                        <span
                          class="ant-tree-switcher-leaf-line"
                        />
                      </span>
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Мои пароли2-1"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Мои пароли2-1
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="ant-modal-root css-dev-only-do-not-override-dkbvqv"
      >
        <div
          class="ant-modal-mask"
        />
        <div
          class="ant-modal-wrap"
          tabindex="-1"
        >
          <div
            aria-modal="true"
            class="ant-modal css-dev-only-do-not-override-dkbvqv ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
            role="dialog"
            style="width: 700px; transform-origin: NaNpx NaNpx;"
          >
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
            <div
              class="ant-modal-content"
            >
              <div
                class="ant-modal-body"
              >
                <h3>
                  Редактировать "Мои пароли2"
                </h3>
                <form
                  class="ant-form ant-form-horizontal css-dev-only-do-not-override-dkbvqv form"
                >
                  <div
                    class="ant-form-item css-dev-only-do-not-override-dkbvqv"
                  >
                    <div
                      class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
                    >
                      <div
                        class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-dkbvqv"
                      >
                        <label
                          class=""
                          for="parentId"
                          title="Родительская группа:"
                        >
                          Родительская группа
                        </label>
                      </div>
                      <div
                        class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <div
                              class="ant-select ant-tree-select ant-select-in-form-item css-dev-only-do-not-override-dkbvqv ant-select-single ant-select-show-arrow"
                            >
                              <div
                                class="ant-select-selector"
                              >
                                <span
                                  class="ant-select-selection-search"
                                >
                                  <input
                                    aria-autocomplete="list"
                                    aria-controls="parentId_list"
                                    aria-expanded="false"
                                    aria-haspopup="listbox"
                                    aria-owns="parentId_list"
                                    autocomplete="off"
                                    class="ant-select-selection-search-input"
                                    id="parentId"
                                    readonly=""
                                    role="combobox"
                                    style="opacity: 0;"
                                    type="search"
                                    unselectable="on"
                                    value=""
                                  />
                                </span>
                                <span
                                  class="ant-select-selection-item"
                                  title="Мои пароли"
                                >
                                  Мои пароли
                                </span>
                              </div>
                              <span
                                aria-hidden="true"
                                class="ant-select-arrow"
                                style="user-select: none;"
                                unselectable="on"
                              >
                                <span
                                  aria-label="down"
                                  class="anticon anticon-down ant-select-suffix"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="down"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-form-item css-dev-only-do-not-override-dkbvqv"
                  >
                    <div
                      class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
                    >
                      <div
                        class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-dkbvqv"
                      >
                        <label
                          class=""
                          for="title"
                          title="Наименование:"
                        >
                          Наименование
                        </label>
                      </div>
                      <div
                        class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <input
                              class="ant-input css-dev-only-do-not-override-dkbvqv css-dev-only-do-not-override-dkbvqv"
                              id="title"
                              type="text"
                              value="Мои пароли2"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-form-item css-dev-only-do-not-override-dkbvqv ant-form-item-hidden"
                  >
                    <div
                      class="ant-row ant-form-item-row css-dev-only-do-not-override-dkbvqv"
                    >
                      <div
                        class="ant-col ant-form-item-control ant-col-sm-16 ant-col-md-24 css-dev-only-do-not-override-dkbvqv"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <input
                              class="ant-input css-dev-only-do-not-override-dkbvqv css-dev-only-do-not-override-dkbvqv"
                              id="key"
                              type="hidden"
                              value="2"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-row ant-row-end css-dev-only-do-not-override-dkbvqv"
                  >
                    <div
                      class="ant-col css-dev-only-do-not-override-dkbvqv"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary"
                        type="submit"
                      >
                        <span>
                          Сохранить
                        </span>
                      </button>
                    </div>
                    <div
                      class="ant-col css-dev-only-do-not-override-dkbvqv"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-default actionButton"
                        type="button"
                      >
                        <span>
                          Отмена
                        </span>
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="treeLayout"
    >
      <div
        class="buttonPanel"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary ant-btn-sm ant-btn-icon-only"
          title="Добавить группу"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-plus "
              data-icon="plus"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary ant-btn-sm ant-btn-icon-only"
          title="Редактировать группу"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-pen-to-square "
              data-icon="pen-to-square"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary ant-btn-sm ant-btn-icon-only"
          title="Удалить группу"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-trash-can "
              data-icon="trash-can"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0H284.2c12.1 0 23.2 6.8 28.6 17.7L320 32h96c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 96 0 81.7 0 64S14.3 32 32 32h96l7.2-14.3zM32 128H416V448c0 35.3-28.7 64-64 64H96c-35.3 0-64-28.7-64-64V128zm96 64c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <div
          class="toggle groupToggle"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-bars "
            data-icon="bars"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="tree"
      >
        <div
          class="ant-tree ant-tree-icon-hide css-dev-only-do-not-override-10e73cp ant-tree-show-line"
          role="tree"
        >
          <div>
            <input
              aria-label="for screen reader"
              style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
              tabindex="0"
              value=""
            />
          </div>
          <div
            aria-hidden="true"
            class="ant-tree-treenode"
            style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
          >
            <div
              class="ant-tree-indent"
            >
              <div
                class="ant-tree-indent-unit"
              />
            </div>
          </div>
          <div
            class="ant-tree-list"
            style="position: relative;"
          >
            <div
              class="ant-tree-list-holder"
            >
              <div>
                <div
                  class="ant-tree-list-holder-inner"
                  style="display: flex; flex-direction: column;"
                >
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-open"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    />
                    <span
                      class="ant-tree-switcher ant-tree-switcher-noop"
                    >
                      <span
                        class="ant-tree-switcher-leaf-line"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                      title="Мои пароли"
                    >
                      <span
                        class="ant-tree-title"
                      >
                        Мои пароли
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-selected"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    />
                    <span
                      class="ant-tree-switcher ant-tree-switcher-noop"
                    >
                      <span
                        class="ant-tree-switcher-leaf-line"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal ant-tree-node-selected"
                      title="Мои пароли2"
                    >
                      <span
                        class="ant-tree-title"
                      >
                        Мои пароли2
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    />
                    <span
                      class="ant-tree-switcher ant-tree-switcher-noop"
                    >
                      <span
                        class="ant-tree-switcher-leaf-line"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                      title="Мои пароли2-1"
                    >
                      <span
                        class="ant-tree-title"
                      >
                        Мои пароли2-1
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": Object {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`password-group-tree-render renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="treeLayout"
      >
        <div
          class="buttonPanel"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary ant-btn-sm ant-btn-icon-only"
            disabled=""
            title="Добавить группу"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-plus "
                data-icon="plus"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary ant-btn-sm ant-btn-icon-only"
            disabled=""
            title="Редактировать группу"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-pen-to-square "
                data-icon="pen-to-square"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary ant-btn-sm ant-btn-icon-only"
            disabled=""
            title="Удалить группу"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-trash-can "
                data-icon="trash-can"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0H284.2c12.1 0 23.2 6.8 28.6 17.7L320 32h96c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 96 0 81.7 0 64S14.3 32 32 32h96l7.2-14.3zM32 128H416V448c0 35.3-28.7 64-64 64H96c-35.3 0-64-28.7-64-64V128zm96 64c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
          <div
            class="toggle groupToggle"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-bars "
              data-icon="bars"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <div
          class="tree"
        >
          <div
            class="ant-tree ant-tree-icon-hide css-dev-only-do-not-override-10e73cp ant-tree-show-line"
            role="tree"
          >
            <div>
              <input
                aria-label="for screen reader"
                style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                tabindex="0"
                value=""
              />
            </div>
            <div
              aria-hidden="true"
              class="ant-tree-treenode"
              style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
            >
              <div
                class="ant-tree-indent"
              >
                <div
                  class="ant-tree-indent-unit"
                />
              </div>
            </div>
            <div
              class="ant-tree-list"
              style="position: relative;"
            >
              <div
                class="ant-tree-list-holder"
              >
                <div>
                  <div
                    class="ant-tree-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      aria-grabbed="false"
                      class="ant-tree-treenode ant-tree-treenode-switcher-open"
                      draggable="false"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      />
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      >
                        <span
                          class="ant-tree-switcher-leaf-line"
                        />
                      </span>
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Мои пароли"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Мои пароли
                        </span>
                      </span>
                    </div>
                    <div
                      aria-grabbed="false"
                      class="ant-tree-treenode ant-tree-treenode-switcher-close"
                      draggable="false"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      />
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      >
                        <span
                          class="ant-tree-switcher-leaf-line"
                        />
                      </span>
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Мои пароли2"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Мои пароли2
                        </span>
                      </span>
                    </div>
                    <div
                      aria-grabbed="false"
                      class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
                      draggable="false"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      />
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      >
                        <span
                          class="ant-tree-switcher-leaf-line"
                        />
                      </span>
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Мои пароли2-1"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Мои пароли2-1
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="treeLayout"
    >
      <div
        class="buttonPanel"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary ant-btn-sm ant-btn-icon-only"
          disabled=""
          title="Добавить группу"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-plus "
              data-icon="plus"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary ant-btn-sm ant-btn-icon-only"
          disabled=""
          title="Редактировать группу"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-pen-to-square "
              data-icon="pen-to-square"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-dkbvqv ant-btn-primary ant-btn-sm ant-btn-icon-only"
          disabled=""
          title="Удалить группу"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-trash-can "
              data-icon="trash-can"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0H284.2c12.1 0 23.2 6.8 28.6 17.7L320 32h96c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 96 0 81.7 0 64S14.3 32 32 32h96l7.2-14.3zM32 128H416V448c0 35.3-28.7 64-64 64H96c-35.3 0-64-28.7-64-64V128zm96 64c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <div
          class="toggle groupToggle"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-bars "
            data-icon="bars"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="tree"
      >
        <div
          class="ant-tree ant-tree-icon-hide css-dev-only-do-not-override-10e73cp ant-tree-show-line"
          role="tree"
        >
          <div>
            <input
              aria-label="for screen reader"
              style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
              tabindex="0"
              value=""
            />
          </div>
          <div
            aria-hidden="true"
            class="ant-tree-treenode"
            style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
          >
            <div
              class="ant-tree-indent"
            >
              <div
                class="ant-tree-indent-unit"
              />
            </div>
          </div>
          <div
            class="ant-tree-list"
            style="position: relative;"
          >
            <div
              class="ant-tree-list-holder"
            >
              <div>
                <div
                  class="ant-tree-list-holder-inner"
                  style="display: flex; flex-direction: column;"
                >
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-open"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    />
                    <span
                      class="ant-tree-switcher ant-tree-switcher-noop"
                    >
                      <span
                        class="ant-tree-switcher-leaf-line"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                      title="Мои пароли"
                    >
                      <span
                        class="ant-tree-title"
                      >
                        Мои пароли
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-close"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    />
                    <span
                      class="ant-tree-switcher ant-tree-switcher-noop"
                    >
                      <span
                        class="ant-tree-switcher-leaf-line"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                      title="Мои пароли2"
                    >
                      <span
                        class="ant-tree-title"
                      >
                        Мои пароли2
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    />
                    <span
                      class="ant-tree-switcher ant-tree-switcher-noop"
                    >
                      <span
                        class="ant-tree-switcher-leaf-line"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                      title="Мои пароли2-1"
                    >
                      <span
                        class="ant-tree-title"
                      >
                        Мои пароли2-1
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": Object {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;
